# my-text-to-sql-poc

./: .gitignore  .sqlfluff  Dockerfile  README.md  blog.txt  initialize_sakila.sh  pyproject.toml  review.txt
data/: sample.db  setup.sql
data/sample_queries/: sample_query_1.sql  sample_query_10.sql  sample_query_2.sql  sample_query_3.sql  sample_query_4.sql  sample_query_5.sql  sample_query_6.sql  sample_query_7.sql  sample_query_8.sql  sample_query_9.sql
data/schema/: adress.json  category.json  customer.json  film.json  film_actor.json  inventory.json  payment.json  store.json
data/summarized_sample_queries/: sample_query_1.txt  sample_query_10.txt  sample_query_2.txt  sample_query_3.txt  sample_query_4.txt  sample_query_5.txt  sample_query_6.txt  sample_query_7.txt  sample_query_8.txt  sample_query_9.txt
data/summarized_schema/: actor.txt  adress.txt  category.txt  city.txt  country.txt  customer.txt  customer_list.txt  film.txt  film_actor.txt  film_category.txt  film_text.txt  inventory.txt  language.txt  payment.txt  rental.txt  sales_by_film_category.txt  sales_by_store.txt  staff.txt  store.txt
docs/: ai_analytics_engineer_idea.md  langchain_memo.md  langgraph_memo.md  memo.md  milestones.md  requirements.md  setup_instructions.md  streamlit_memo.md  text2sql_app_memo.md
docs/materials/: ai-scientist.md  define_custome_tools.md  how_to_create_tools.md  how_to_use_buildin_tools.md  langchain_ai_agent_definition.md  langgraph.md  langgraph_ai_agent_definition.md  langgraph_conceptual_guide.md  langgraph_quickstart.md  why_langgraph.md
docs/materials/tools/: e2b_data_analysis.md
prompts/: generate_sql_prompt.txt  generate_sql_prompt_ver1_jp.txt  generate_sql_prompt_ver2_jp.txt  generate_sql_prompt_ver2_jp.yaml  generate_table_metadata.yaml  generate_table_metadata_jp.txt  output_gurdrails_prompts.yaml  summarize_query_prompt.txt  summarize_query_prompt_jp.txt  summarize_table_prompt.txt  summarize_table_prompt_jp.txt
schema/: actor.json  city.json  country.json  customer_list.json  film_category.json  film_text.json  language.json  rental.json  sales_by_film_category.json  sales_by_store.json  staff.json  tables_schema.json
src/my_text_to_sql_poc/: __main__.py  sql_formatter.py
src/my_text_to_sql_poc/app/: migrate_to_duckdb.py  prepare_RAG_documents_batch.py  table_metadata_generator.py  upload_to_s3.py
src/my_text_to_sql_poc/app/ai_agent_sample/: __main__.py  custom_tool.py  prompts.yaml  (+2 more)
src/my_text_to_sql_poc/poc/: langchain_conversation_memory.py
src/my_text_to_sql_poc/presentation/: streamlit_gui.py  text2sql_cli.py
src/my_text_to_sql_poc/service/: model_gateway.py  related_table_extractor.py  repository.py
tests/my_text_to_sql_poc/: test_e2e.py  test_sql_formatter.py
tests/my_text_to_sql_poc/service/: test_related_table_extractor.py
(+27 files in other folders)
