[tool.poetry]
name = "my-text-to-sql-poc"
version = "0.1.0"
description = ""
authors = ["morita <morinota416@gmail.com>"]
readme = "README.md"
packages = [{include = "my_text_to_sql_poc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.53.0"
langchain = "^0.3.7"
typer = "^0.12.5"
loguru = "^0.7.2"
sqlfluff = "^3.2.5"
faiss-cpu = "^1.9.0"
sentence-transformers = "^3.2.1"
langchain-openai = "^0.2.6"
langchain-community = "^0.3.5"
tavily-python = "^0.5.0"
omegaconf = "^2.3.0"
duckdb = "^1.1.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.2"
pytest-mock = "^3.14.0"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]


[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
