[project]
name = "my-text-to-sql-poc"
version = "0.1.0"
description = ""
authors = [{ name = "morita", email = "morinota416@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "langchain~=0.3.7",
    "typer~=0.12.5",
    "loguru~=0.7.2",
    "sqlfluff~=3.2.5",
    "faiss-cpu~=1.9.0",
    "sentence-transformers~=3.2.1",
    "langchain-openai~=0.2.6",
    "langchain-community~=0.3.5",
    "tavily-python~=0.5.0",
    "omegaconf~=2.3.0",
    "duckdb~=1.1.3",
    "pandas~=2.2.3",
    "tiktoken~=0.8.0",
    "streamlit~=1.40.1",
    "polars",
    "snowflake-connector-python~=3.12.3",
    "langgraph~=0.2.53",
    "duckduckgo-search~=6.3.7",
    "langsmith~=0.1.147",
    "ipython~=8.30.0",
    "matplotlib~=3.9.3",
    "duckdb-engine~=0.14.2",
    "langchain-experimental~=0.3.4",
    "mcp~=1.6.0",
    "boto3~=1.37.30",
]

[dependency-groups]
dev = ["pytest~=8.3.3", "ruff~=0.7.2", "pytest-mock~=3.14.0"]

[tool.hatch.build.targets.sdist]
include = ["src/my_text_to_sql_poc"]

[tool.hatch.build.targets.wheel]
include = ["src/my_text_to_sql_poc"]

[tool.hatch.build.targets.wheel.sources]
"src/my_text_to_sql_poc" = "my_text_to_sql_poc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff]
line-length = 120
